name:                hakyll-blog
version:             0.1.0.0
synopsis:            smt.io blog
description:         Please see README.md
homepage:            http://github.com/smt/hakyll-blog#readme
license-file:        LICENSE
author:              Stephen Tudor
maintainer:          smt@smt.io
copyright:           Copyright: (c) 2016 Stephen Tudor
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.22

executable site
  hs-source-dirs:      .
  main-is:             site.hs
  build-depends:       base,
                       hakyll,
                       pandoc
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/smt/hakyll-blog
